load("//devtools/tools:ng_module.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//devtools/tools:typescript.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "injector_tree_component_styles",
    src = "injector-tree.component.scss",
)

ts_library(
    name = "injector-tree-graph",
    srcs = ["injector-tree-graph.ts"],
    deps = [
        "@npm//@types",
        "@npm//d3",
        "@npm//rxjs",
    ],
)

ng_module(
    name = "injector-tree",
    srcs = [
        "injector-tree.component.ts",
    ],
    angular_assets = [
        "injector-tree.component.html",
        ":injector_tree_component_styles",
    ],
    deps = [
        ":injector-tree-graph",
        "//devtools/projects/ng-devtools/src/lib/devtools-tabs/resolution-path",
        "//devtools/projects/ng-devtools/src/lib/vendor/angular-split",
        "//devtools/projects/protocol",
        "//packages/common",
        "//packages/core",
        "@npm//@angular/material",
        "@npm//@types",
        "@npm//rxjs",
    ],
)
